--- a/fun.html
+++ b/fun.html
@@ -8,6 +8,84 @@
     <link rel="icon" href="./images/logo-color.png">
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    *{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
+body{
+    background-color: #101426;
+}
+.nav-container{
+    display: flex;
+    width: 100%;
+    height: 200px;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    background-color: rgba(15, 132, 132, 0.137);
+}
+.logo {
+    position: relative;
+    left: 25px;
+}
+.navbar ul li{
+    display: inline-block;
+    color: #fff;
+    margin-right: 70px;
+    font-size: 2rem;
+
+
+}
+li a:hover{
+    color: rgb(196, 129, 6);
+    padding: 20px;
+}
+.tit{
+    margin-top: 30px;
+    margin-left: 15px;
+    color: white;
+    font-size: 3rem;
+}
+/* main starts here  */
+
+.firstSection{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 200px;
+    width: 100%;
+    margin-top: 200px;
+}
+.fright{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 500px;
+}
+.fleft{
+    width: 50%;
+}
+
+#myName{
+    color: rgb(148, 60, 250);
+}
+#element{
+    color: rgb(171, 20, 20);
+}
+/* footer starts here  */
+.foot{
+    text-align: center;
+    color: #fff;
+    font-size: large;
+    margin-top: 150px;
+    margin-bottom: 20px;
+}
+</style>
 
 <body>
     <header>
@@ -17,7 +95,7 @@
                 </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html" style="color:white; text-decoration: none;">Home</a></li>
                         <li><a href="#">About Me</a></li>
                         <li><a href="https://instagram.com/me.bimalpdl1/" target="_blank"
                                 title="This will redirect you to my instagram account.">Contact Me</a></li>
@@ -35,12 +113,14 @@
             <section class="firstSection">
                 <div class="fleft">
                     <h1 class="tit">
-                        <a href="fun.html"> Hello <a href="fun.html"></a>There, this is <span id="myName">Bimal. </span><br> I am 
+                        Ko <br>
                         <span id="element"></span>
+                        hau timi? 🤪 <br>
+                        Lau kera khau.
                     </h1>
                 </div>
                 <div class="fright">
-                    <img src="./images/developer1.png" alt="Developer image" width="400px">
+                    <img src="./images/minion.png" alt="Developer image" width="500px">
                 </div>
             </section>
             </header>
@@ -65,8 +145,8 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-          strings: [' a Tech enthusiast.','an IT student.'],
-          typeSpeed: 75,
+          strings: ['Murkha','Gadha' , 'Lafanga','Nalayak','Kamchor', 'Pagal'],
+          typeSpeed: 125,
         });
       </script>
 </body>
