--- a/fun.html
+++ b/fun.html
@@ -113,10 +113,8 @@ li a:hover{
             <section class="firstSection">
                 <div class="fleft">
                     <h1 class="tit">
-                        Ko <br>
+                        Ko aai pugyo feri??<br>
                         <span id="element"></span>
-                        hau timi? 🤪 <br>
-                        Lau kera khau.
                     </h1>
                 </div>
                 <div class="fright">
@@ -145,7 +143,7 @@ li a:hover{
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-          strings: ['Murkha','Gadha' , 'Lafanga','Nalayak','Kamchor', 'Pagal'],
+          strings: ['Pakkai kunai lafanga hunuparxa.','Kasto berojgar raixa.' , 'Nalayak kahi ko..','Kamchor...','Lau kera khau..'],
           typeSpeed: 125,
         });
       </script>
