--- a/fun.html
+++ b/fun.html
@@ -143,7 +143,7 @@ li a:hover{
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-          strings: ['Pakkai kunai lafanga hunuparxa.','Kasto berojgar raixa.' , 'Nalayak kahi ko..','Kamchor...','Lau kera khau..'],
+          strings: ['Pakkai kunai lafanga hunuparxa.','Kasto berojgar raixa.' , 'Nalayak kahi ko..','Kamchor...','Lau kera khau..' ,'---->>'],
           typeSpeed: 125,
         });
       </script>
